frontend/styles/jam/components/Sidebar.module.css
.sidebar-container {
  justify-content: center;

  position: relative;
  width: 20rem;
}

.sidebar {
  position: fixed;
  bottom: 50vh;
  transform: translateY(50%);

  max-height: 90vh;
  overflow-y: scroll;
  width: 15rem;
  background-color: var(--background-color);

  border-radius: 25px;

  box-shadow: var(--box-shadow);
}

.chapter {
  width: 100%;
  aspect-ratio: 10 / 3;

  text-decoration: none;
  color: var(--text-color);

  border-bottom: 1px solid var(--secondary-color);
}

.chapter:hover {
  background-color: var(--primary-color);

  color: white;
}

@media (min-width: 1500px) {
  .sidebar-container {
    display: flex;
  }

  .sidebar {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
  }

  .chapter {
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

@media (max-width: 1500px) {
  .sidebar-container {
    display: none;
  }

  .sidebar {
    display: none;
  }

  .chapter {
    display: none;
  }
}

